@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $NetBSD: install-sh.in,v 1.3 2007/07/04 19:21:22 jlam Exp $
+# $NetBSD: install-sh.in,v 1.4 2007/07/12 18:32:50 jlam Exp $
 # This script now also installs multiple files, but might choke on installing
 # multiple files with spaces in the file names.
 #
@@ -34,6 +34,7 @@ doit="${DOITPROG-}"
 
 # put in absolute paths if you don't have them in your path; or use env. vars.
 
+awkprog="${AWKPROG-awk}"
 mvprog="${MVPROG-mv}"
 cpprog="${CPPROG-cp}"
 chmodprog="${CHMODPROG-chmod}"
@@ -43,8 +44,6 @@ stripprog="${STRIPPROG-strip}"
 rmprog="${RMPROG-rm}"
 mkdirprog="${MKDIRPROG-mkdir}"
 
-transformbasename=""
-transform_arg=""
 instcmd="$mvprog"
 pathcompchmodcmd="$chmodprog @DEFAULT_INSTALL_MODE@"
 chmodcmd="$chmodprog @DEFAULT_INSTALL_MODE@"
@@ -58,9 +57,20 @@ src=""
 msrc=""
 dst=""
 dir_arg=""
+suffix=""
+suffixfmt=""
 
 while [ x"$1" != x ]; do
     case $1 in
+	-b) suffix=".old"
+	    shift
+	    continue;;
+
+	-B) suffixfmt="$2"
+	    shift
+	    shift
+	    continue;;
+
 	-c) instcmd="$cpprog"
 	    shift
 	    continue;;
@@ -91,14 +101,6 @@ while [ x"$1" != x ]; do
 	-S) stripcmd="$stripprog"
 	    stripflags="-S $2 $stripflags"
 	    shift
-	    shift
-	    continue;;
-
-	-t=*) transformarg=`echo "$1" | sed 's/-t=//'`
-	    shift
-	    continue;;
-
-	-b=*) transformbasename=`echo "$1" | sed 's/-b=//'`
 	    shift
 	    continue;;
 
@@ -226,8 +228,6 @@ fi
 		fi
 	else
 
-# If we're going to rename the final file, determine the name now.
-
 		if [ x"$dstisfile" = x ]
 		then
 			file=$srcarg
@@ -235,26 +235,27 @@ fi
 			file=$dst
 		fi
 
-		if [ x"$transformarg" = x ] 
-		then
-			dstfile=`basename "$file"`
-		else
-			dstfile=`basename "$file" "$transformbasename" | 
-				sed $transformarg`$transformbasename
-		fi
-
-# don't allow the sed command to completely eliminate the filename
-
-		if [ x"$dstfile" = x ] 
-		then
-			dstfile=`basename "$file"`
-		else
-			true
-		fi
+		dstfile=`basename "$file"`
+		dstfinal="$dstdir/$dstfile"
 
 # Make a temp file name in the proper directory.
 
 		dsttmp=$dstdir/#inst.$$#
+
+# Make a backup file name in the proper directory.
+		case x$suffixfmt in
+		*%*)	suffix=`echo x |
+			$awkprog -v bname="$dstfinal" -v fmt="$suffixfmt" '
+			{ cnt = 0;
+			  do {
+				sfx = sprintf(fmt, cnt++);
+				name = bname sfx;
+			  } while (system("test -f " name) == 0);
+			  print sfx; }' -`;;
+		x)	;;
+		*)	suffix="$suffixfmt";;
+		esac
+		dstbackup="$dstfinal$suffix"
 
 # Move or copy the file name to the temp name
 
@@ -275,8 +276,13 @@ fi
 
 # Now rename the file to the real destination.
 
-		$doit $rmcmd -f "$dstdir/$dstfile" &&
-		$doit $mvcmd "$dsttmp" "$dstdir/$dstfile"
+		if [ x"$suffix" != x ] && [ -f "$dstfinal" ]
+		then
+			$doit $mvcmd "$dstfinal" "$dstbackup"
+		else
+			$doit $rmcmd -f "$dstfinal"
+		fi &&
+		$doit $mvcmd "$dsttmp" "$dstfinal"
 	fi
 
 done &&
