@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1554 2007/07/12 17:13:02 joerg Exp $
+$NetBSD: CHANGES-2007,v 1.1555 2007/07/12 18:32:49 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2862,3 +2862,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Removed www/ap-iasp [jlam 2007-07-12]
 	Removed www/iasp [jlam 2007-07-12]
 	Updated x11/libXi to 1.1.1 [joerg 2007-07-12]
+	Updated sysutils/install-sh to 20070712 [jlam 2007-07-12]
